Version 5.6.2 - 2020-07-01
* Bug fixes (see mercurial logs for details)

Version 5.6.1 - 2020-05-15
* Bug fixes (see mercurial logs for details)

Version 5.6.0 - 2020-05-04
* Bug fixes (see mercurial logs for details)
* Support link button on form
* Add URL for the current export
* Add option to export listed records
* Retire App Menu
* Add support for Python 3.8
* Manage readonly dates in calendar view
* Manage editable on calendar view
* Manage model access on calendar view
* Set client title at the end of header bar
* Manage named separator as label
* Add MultiSelection entry to Dict field
* Position new record based on order
* Allow relation field to be selected in CSV export
* Support validate attribute of wizard's Button

Version 5.4.0 - 2019-11-04
* Bug fixes (see mercurial logs for details)
* Support visual context on tree view
* Support multiselection field
* Support dot notation on PYSON Eval
* Order Dict keys by sequence
* Support relation fields in domain parser
* Add Dict widget for tree view
* Add handle to reordable line of tree views

Version 5.2.0 - 2019-05-06
* Bug fixes (see mercurial logs for details)
* Add domain inversion for reference fields
* Add list-form view
* Remove support for Python 3.4
* Replace ColorSelectionDialog by ColorChooserDialog
* Support HTML widget
* Use locale format for data import and export
* Add day view on calendar
* Add CSV exports into print toolbar
* Display unread and total of notes
* Support badge on icon
* Use resources method
* Replace Arrow by Image
* Remove Fast Tabbing option
* Remove usage of focus_chain
* Add shortcuts for switch and remove on One2Many
* Rename roundup.url configuration to bug.url
* Remove send error to bug tracker
* Replace Table by Grid
* Use separate XML parser in Views
* Use between numbers in filter box
* Rename email and calendar file
* Use markup for styling
* Replace ImageMenuItem by MenuItem
* Replace ComboBoxEntry by ComboBox or ComboBoxText